kubernetes/net-policy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: policy-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello
