kubernetes/net-policy/access-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-policy
  namespace: policy-test
spec:
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: access
